--- a/package.json
+++ b/package.json
@@ -1,27 +1,25 @@
 {
-  "name": "express-ts",
+  "name": "backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "npx nodemon ./src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "concurrently -k \"tsc --watch\" \"nodemon dist/index.js\"",
+    "build": "npx tsc",
+    "start": "node dist/index.js"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Ahmad Zidni",
+  "license": "MIT",
   "dependencies": {
-    "@prisma/client": "^5.4.2",
-    "@types/http-errors": "^2.0.3",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "nodemon": "^3.0.1"
+    "express": "^4.18.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.20",
-    "@types/node": "^20.8.7",
-    "prisma": "^5.4.2",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.0",
+    "concurrently": "^8.2.2",
+    "nodemon": "^3.0.1",
+    "typescript": "^5.3.2"
   }
 }
