--- a/package.json
+++ b/package.json
@@ -1,25 +1,31 @@
 {
-  "name": "backend",
+  "name": "express-ts",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "concurrently -k \"tsc --watch\" \"nodemon dist/index.js\"",
-    "build": "npx tsc",
-    "start": "node dist/index.js"
+    "start": "node build/index.js",
+    "dev": "nodemon src/index.ts",
+    "build": "tsc"
   },
-  "keywords": [],
   "author": "Ahmad Zidni",
-  "license": "MIT",
-  "dependencies": {
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2"
-  },
+  "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/node": "^20.10.0",
-    "concurrently": "^8.2.2",
-    "nodemon": "^3.0.1",
-    "typescript": "^5.3.2"
+    "@types/morgan": "^1.9.9",
+    "@types/cookie-parser": "^1.4.6",
+    "@types/cors": "^2.8.17",
+    "nodemon": "^3.0.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.2",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
+    "morgan": "^1.10.0"
   }
 }
