--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
+    "babel-watch": "^7.8.1",
     "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "cross-env": "^7.0.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.2",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
