--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=PROD node build/index.js",
-    "dev": "cross-env NODE_ENV=DEV nodemon src/index.ts",
+    "start": "cross-env NODE_ENV=production node build/index.js",
+    "dev": "cross-env NODE_ENV=development nodemon src/index.ts",
     "build": "tsc"
   },
   "author": "Ahmad Zidni",
