--- a/package.json
+++ b/package.json
@@ -6,17 +6,21 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production node build/index.js",
     "dev": "cross-env NODE_ENV=development nodemon src/index.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest"
   },
-  "author": "Ahmad Zidni",
-  "license": "ISC",
+  "author": "Ahmad Zidni Hidayat",
+  "license": "MIT",
   "devDependencies": {
     "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/morgan": "^1.9.9",
-    "babel-watch": "^7.8.1",
+    "@types/supertest": "^6.0.2",
     "nodemon": "^3.0.3",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
